# max1

./: .gitignore  README.md
.idx/: mcp.json
backend/: pyproject.toml
backend/max/: __init__.py  main.py  main_cli.py
backend/max/agents/: __init__.py  executor.py  file_manager.py  router.py  synthesizer.py
backend/max/agents/file_manager/: __init__.py  agent.json  agent.py
backend/max/api/: __init__.py  models.py  plugins.py  runs.py  threads.py
backend/max/core/: __init__.py  graph.py  snapshots.py  state.py
backend/max/mcp/: __init__.py
backend/max/mcp/example_math/: README.md  mcp.json  server.py
backend/max/otel/: __init__.py  processor.py  setup.py
backend/max/plugins/: __init__.py  mcp_manager.py  registry.py  skill_loader.py
backend/max/plugins/manifests/: file_manager.json  web_search.json
backend/max/skills/: __init__.py
backend/max/skills/web_search/: SKILL.md  __init__.py  skill.json  skill.py
backend/max/tools/: __init__.py
backend/max/tools/calculator/: __init__.py  tool.json  tool.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: layout.tsx
frontend/src/components/chat/: AgentStepBlock.tsx  AgentStepList.tsx  AssistantMessage.tsx  ChatArea.tsx  Message.tsx  MessageActions.tsx  MessageList.tsx  UserMessage.tsx
frontend/src/components/input/: ChatInput.tsx
frontend/src/components/layout/: TopBar.tsx  WelcomeScreen.tsx
frontend/src/components/sidebar/: Sidebar.tsx  ThreadContextMenu.tsx  ThreadItem.tsx  ThreadList.tsx
