[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "max-backend"
version = "0.1.0"
description = "MAX — Framework-agnostic multi-agent platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-core>=0.3.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["max*"]
