[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "max-backend"
version = "0.1.0"
description = "MAX — Framework-agnostic multi-agent platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "langchain-groq",
    "langchain-core",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "aiosqlite",
    "langgraph-checkpoint-sqlite",
    "python-dotenv",
    "pydantic",
    "httpx",
    "rich",
    "click",
]

[project.scripts]
max = "max.main_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["max*"]
